# docs-to-rag

./: .gitignore  HIERARCHICAL_DOCUMENT_ENRICHMENT_SPECS.md  HIERARCHICAL_DOCUMENT_ENRICHMENT_SPECS_es.md  README.md  SPECS.md  SPECS_es.md  pyproject.toml
config/: user_config.json.example
data/documents/: example.html  sample.md
src/: __init__.py
src/cli/: __init__.py  chat.py  commands.py
src/config/: __init__.py  settings.py
src/data/vector_db/: metadata.json
src/document_processor/: __init__.py  chunker.py  extractor.py  summarizer.py
src/document_processor/parsers/: __init__.py  html_parser.py  markdown_parser.py  pdf_parser.py
src/rag/: __init__.py  generator.py  pipeline.py  retriever.py
src/vector_store/: __init__.py  embeddings.py  store.py
tests/: __init__.py
tests/integration/: test_basic.py  test_vector_store.py
tests/unit/: test_chunker.py  test_cli.py  test_config.py  test_embeddings.py
